c2rust-transpile/tests/snapshots/snapshots__transpile@f128.c.2021.linux.clang15.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/os-specific/f128.2021.linux.clang15.rs
---
#![allow(
    clippy::missing_safety_doc,
    dead_code,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused_assignments,
    unused_mut
)]
use ::num_traits::Float;
#[no_mangle]
pub unsafe extern "C" fn long_double_test() {
    let mut one: ::f128::f128 = ::f128::f128::new(1.0);
    let mut zero: ::f128::f128 = ::f128::f128::ZERO;
    let mut add: ::f128::f128 = one + zero;
    let mut huge: ::f128::f128 = ::f128::f128::INFINITY;
    let mut i: ::core::ffi::c_int = Into::<::core::ffi::c_int>::into(one);
    let mut f: ::core::ffi::c_float = Into::<::core::ffi::c_float>::into(one);
    let mut cast_from_int: ::f128::f128 = ::f128::f128::new(i);
    let mut cast_from_float: ::f128::f128 = ::f128::f128::new(f);
    let mut is_inf: bool = if huge.is_infinite() {
        if huge.is_sign_positive() {
            1 as ::core::ffi::c_int
        } else {
            -1 as ::core::ffi::c_int
        }
    } else {
        0 as ::core::ffi::c_int
    } != 0;
    if one != ::f128::f128::ZERO {
        let mut dummy: ::core::ffi::c_int = 0;
    }
}
#[no_mangle]
pub unsafe extern "C" fn float128_test() {
    let mut one: ::f128::f128 = ::f128::f128::new(1.0);
    let mut zero: ::f128::f128 = ::f128::f128::ZERO;
    let mut add: ::f128::f128 = one + zero;
    let mut huge: ::f128::f128 = ::f128::f128::INFINITY;
    let mut i: ::core::ffi::c_int = Into::<::core::ffi::c_int>::into(one);
    let mut f: ::core::ffi::c_float = Into::<::core::ffi::c_float>::into(one);
    let mut cast_from_int: ::f128::f128 = ::f128::f128::new(i);
    let mut cast_from_float: ::f128::f128 = ::f128::f128::new(f);
    let mut ld_from_float128: ::f128::f128 = one;
    let mut is_inf: bool = if huge.is_infinite() {
        if huge.is_sign_positive() {
            1 as ::core::ffi::c_int
        } else {
            -1 as ::core::ffi::c_int
        }
    } else {
        0 as ::core::ffi::c_int
    } != 0;
    if one != ::f128::f128::ZERO {
        let mut dummy: ::core::ffi::c_int = 0;
    }
}
