c2rust-transpile/tests/snapshots/snapshots__transpile@f128.c.2021.macos.clang15.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/os-specific/f128.c.2021.macos.rs
---
#![allow(
    clippy::missing_safety_doc,
    dead_code,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused_assignments,
    unused_mut
)]
use ::num_traits::{Float, ToPrimitive};
#[derive(Clone, Copy, PartialEq, Eq)]
#[repr(transparent)]
pub struct E(pub ::core::ffi::c_uint);
impl E {
    pub const A: Self = Self(0);
}
#[inline(always)]
unsafe extern "C" fn __inline_isinff(mut __x: ::core::ffi::c_float) -> ::core::ffi::c_int {
    return (__x.abs() == ::core::f32::INFINITY) as ::core::ffi::c_int;
}
#[inline(always)]
unsafe extern "C" fn __inline_isinfd(mut __x: ::core::ffi::c_double) -> ::core::ffi::c_int {
    return (__x.abs() == ::core::f64::INFINITY) as ::core::ffi::c_int;
}
#[inline(always)]
unsafe extern "C" fn __inline_isinfl(mut __x: ::f128::f128) -> ::core::ffi::c_int {
    return (__x.abs() == ::f128::f128::INFINITY) as ::core::ffi::c_int;
}
#[no_mangle]
pub unsafe extern "C" fn long_double_test() {
    let mut one: ::f128::f128 = ::f128::f128::new(1.0);
    let mut zero: ::f128::f128 = ::f128::f128::ZERO;
    let mut add: ::f128::f128 = one + zero;
    let mut huge: ::f128::f128 = ::f128::f128::INFINITY;
    let mut i: ::core::ffi::c_int = one.to_i32().unwrap();
    let mut f: ::core::ffi::c_float = one.to_f32().unwrap();
    let mut b: bool = one != ::f128::f128::ZERO;
    let mut e: E = E::A;
    let mut cast_from_int: ::f128::f128 = ::f128::f128::new(i);
    let mut cast_from_float: ::f128::f128 = ::f128::f128::new(f);
    let mut cast_from_bool: ::f128::f128 = ::f128::f128::new(b);
    let mut cast_from_enum: ::f128::f128 = ::f128::f128::new(e);
    let mut is_inf: bool = if ::core::mem::size_of::<::f128::f128>()
        == ::core::mem::size_of::<::core::ffi::c_float>()
    {
        __inline_isinff(huge.to_f32().unwrap())
    } else if ::core::mem::size_of::<::f128::f128>()
        == ::core::mem::size_of::<::core::ffi::c_double>()
    {
        __inline_isinfd(huge.to_f64().unwrap())
    } else {
        __inline_isinfl(huge)
    } != 0;
    if one != ::f128::f128::ZERO {
        let mut dummy: ::core::ffi::c_int = 0;
    }
}
