c2rust-transpile/tests/snapshots/snapshots__transpile@factorial.c.2024.clang15.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/factorial.2024.clang15.rs
---
#![allow(
    clippy::missing_safety_doc,
    dead_code,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unsafe_op_in_unsafe_fn,
    unused_assignments,
    unused_mut
)]
#[unsafe(no_mangle)]
pub unsafe extern "C" fn factorial(mut n: ::core::ffi::c_ushort) -> ::core::ffi::c_ushort {
    let mut result: ::core::ffi::c_ushort = 1 as ::core::ffi::c_ushort;
    let mut i: ::core::ffi::c_ushort = 1 as ::core::ffi::c_ushort;
    while (i as ::core::ffi::c_int) < n as ::core::ffi::c_int {
        result = (result as ::core::ffi::c_int * i as ::core::ffi::c_int) as ::core::ffi::c_ushort;
        i = i.wrapping_add(1);
    }
    return result;
}
